--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: flutter_dialogs
-description: "A new Flutter project."
+name: flutter_androssy_dialogs
+description: "Customized alert dialog, editable dialog, loading dialog and message dialog"
 version: 0.0.1
-repository:
+repository: https://github.com/Mohiuddin655-ORG/flutter_dialogs.git
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
